; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/bios/extr_command_table.c_dac2_encoder_control_v1.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/bios/extr_command_table.c_dac2_encoder_control_v1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bios_parser = type { i32 }

@BP_RESULT_FAILURE = common dso_local global i32 0, align 4
@DAC2EncoderControl = common dso_local global i32 0, align 4
@BP_RESULT_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bios_parser*, i32, i32, i32)* @dac2_encoder_control_v1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dac2_encoder_control_v1(%struct.bios_parser* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.bios_parser*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.bios_parser* %0, %struct.bios_parser** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @BP_RESULT_FAILURE, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @dac_encoder_control_prepare_params(i32* %10, i32 %12, i32 %13, i32 %14)
  %16 = load i32, i32* @DAC2EncoderControl, align 4
  %17 = load i32, i32* %10, align 4
  %18 = call i64 @EXEC_BIOS_CMD_TABLE(i32 %16, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* @BP_RESULT_OK, align 4
  store i32 %21, i32* %9, align 4
  br label %22

22:                                               ; preds = %20, %4
  %23 = load i32, i32* %9, align 4
  ret i32 %23
}

declare dso_local i32 @dac_encoder_control_prepare_params(i32*, i32, i32, i32) #1

declare dso_local i64 @EXEC_BIOS_CMD_TABLE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
